# basic_image_library

./: .gitignore  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  LICENSE  README.md  _config.yml  adobe_function_api_header.md  api_header.md  basic_function_api_header.md  colour_conversion_api_header.md  index.md  math_function_api_header.md  run_cmake.sh  run_demo.sh
.github/workflows/: cmake.yml
main_code/: CMakeLists.txt  README.md
main_code/includes/: backend_types.hpp  general_include.hpp  img_return.hpp
main_code/includes/adobe_functions/: README.md  img_temperature.hpp
main_code/includes/basic_functions/: README.md  img_padding.hpp  img_return.hpp
main_code/includes/colour_conversion_functions/: README.md  img_hsv_to_rgb.hpp  img_rgb_to_hsv.hpp
main_code/includes/core/: backend_types.hpp  general_include.hpp
main_code/includes/math_functions/: README.md  img_absolute_difference.hpp
main_code/src/: img_return.cpp
main_code/src/adobe_functions/: img_temperature.cpp
main_code/src/basic_functions/: img_padding.cpp  img_return.cpp
main_code/src/colour_conversion_functions/: img_hsv_to_rgb.cpp  img_rgb_to_hsv.cpp
main_code/src/math_functions/: img_absolute_difference.cpp
test_application/: CMakeLists.txt  basic_image_demo.cpp
